# grid nerds: fix - overflow by elements for block services

--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,7 @@ h4 {
   margin-bottom: 0;
   padding-top: 56px;
   padding-bottom: 30px;
+  overflow: hidden;
 
   border-bottom: 2px solid #eeeeee;
 }
